force-app/main/default/objects/Reference_Threshold__c/Reference_Threshold__c.object-meta.xml
<CustomObject>
    <label>Reference Threshold</label>
    <nameField>
        <label>Reference Threshold Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reference Thresholds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>