force-app/main/default/objects/Reference_Threshold__c/fields/Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year__c</fullName>
    <description>Applicable financial year for this threshold record.</description>
    <label>Financial Year</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>FY2025</fullName>
            </value>
            <value>
                <fullName>FY2026</fullName>
            </value>
            <value>
                <fullName>FY2027</fullName>
            </value>
            <value>
                <fullName>FY2028</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>