force-app/main/default/objects/Reference_Threshold__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>Auto-generated unique key built from Stage__c and Touch_Level__c by Reference_Threshold_Key_Flow. Format: Stage__TouchLevel (spaces replaced with underscores).</description>
    <externalId>true</externalId>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>