force-app/main/default/objects/Reference_Threshold__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Region (matches Reference Thresholds sheet).</description>
    <label>Region</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>MENAT</fullName>
            </value>
            <value>
                <fullName>South Africa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>