force-app/main/default/objects/Reference_Threshold__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <description>Auto-generated by Reference_Threshold_Key_Flow. Concatenates Financial_Year__c + Region__c + Cluster__c + Country__c + Volume_Profile__c with underscores. Used to enforce uniqueness per FY/Region/Cluster/Country/Volume combination.</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>