force-app/main/default/objects/Reference_Threshold__c/listViews/All_FY2026.listView-meta.xml
<ListView>
    <fullName>All_FY2026</fullName>
    <columns>NAME</columns>
    <columns>Financial_Year__c</columns>
    <columns>Region__c</columns>
    <columns>Cluster__c</columns>
    <columns>Country__c</columns>
    <columns>Volume_Profile__c</columns>
    <columns>Large_Deal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Financial_Year__c</field>
        <operation>equals</operation>
        <value>FY2026</value>
    </filters>
    <label>All FY2026</label>
</ListView>